XNA library, compatibility and fixes
- ADD: XNA library
- CHG: made classes for compatible for other target frameworks
- FIX: removed optional parameters from pre C# 3.0 projects

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.SDK/bin
+/MarcelJoachimKloubert.CLRToolbox.XNA/*.suo
+/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/obj
+/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/bin
