added test XNA game project

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@
 /MarcelJoachimKloubert.CLRToolbox.XNA/*.suo
 /MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/obj
 /MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/bin
+
+/MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1/obj
+/MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1/bin
+
+/MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1Content/bin
+/MarcelJoachimKloubert.CLRToolbox.XNA/TestGame1/TestGame1Content/obj
